--- a/style/main.css
+++ b/style/main.css
@@ -4,7 +4,7 @@
 @import '../base/_vars.css';
 @import '../base/_reset.css';
 
-@import './style/blocks/_header.css';
+@import '../style/blocks/_header.css';
 @import '../blocks/_nav.css';
 @import '../blocks/_nav-list.css';
 @import './blocks/_logo.css';
