--- a/style/main.css
+++ b/style/main.css
@@ -1,12 +1,12 @@
 @import './../fonts/Lato/stylesheet.css';
 @import './../fonts/Korataki/stylesheet.css';
-@import '../base/_base.css';
-@import '../base/_vars.css';
-@import '../base/_reset.css';
+@import './base/_base.css';
+@import './base/_vars.css';
+@import './base/_reset.css';
 
-@import '../style/blocks/_header.css';
-@import '../blocks/_nav.css';
-@import '../blocks/_nav-list.css';
+@import './blocks/_header.css';
+@import './blocks/_nav.css';
+@import './blocks/_nav-list.css';
 @import './blocks/_logo.css';
 @import './blocks/_cart.css';
 @import './blocks/_search-form.css';
