--- a/style/main.css
+++ b/style/main.css
@@ -1,8 +1,8 @@
-@import './../fonts/Lato/stylesheet.css';
+@import url('./../fonts/Lato/stylesheet.css');
 @import './../fonts/Korataki/stylesheet.css';
 @import './base/_base.css';
 @import './base/_vars.css';
-@import './base/_reset.css';
+@import url('./base/_reset.css');
 
 @import './blocks/_header.css';
 @import './blocks/_nav.css';
