--- a/style/main.css
+++ b/style/main.css
@@ -2,9 +2,9 @@
 @import './../fonts/Korataki/stylesheet.css';
 @import './base/_base.css';
 @import './base/_vars.css';
-@import url('./base/_reset.css');
+@import url('./style/base/_reset.css');
 
-@import './blocks/_header.css';
+@import url('./style/blocks/_header.css');
 @import './blocks/_nav.css';
 @import './blocks/_nav-list.css';
 @import './blocks/_logo.css';
