--- a/style/main.scss
+++ b/style/main.scss
@@ -2,9 +2,9 @@
 @import './../fonts/Korataki/stylesheet.css';
 @import './base/_base.css';
 @import './base/_vars.css';
-@import url('./style/base/_reset.css');
+@import './base/_reset.css';
 
-@import url('./style/blocks/_header.css');
+@import './blocks/_header.css';
 @import './blocks/_nav.css';
 @import './blocks/_nav-list.css';
 @import './blocks/_logo.css';
