--- a/style/main.scss
+++ b/style/main.scss
@@ -1,17 +1,17 @@
 @import './../fonts/Lato/stylesheet.css';
 @import './../fonts/Korataki/stylesheet.css';
-@import './base/_base.css';
-@import './base/_vars.css';
-@import './base/_reset.css';
+@import './base/_base.scss';
+@import './base/_vars.scss';
+@import './base/_reset.scss';
 
-@import './blocks/_header.css';
-@import './blocks/_nav.css';
-@import './blocks/_nav-list.css';
-@import './blocks/_logo.css';
-@import './blocks/_cart.css';
-@import './blocks/_search-form.css';
-@import './blocks/_results.css';
-@import './blocks/_products.css';
-@import './blocks/_card.css';
-@import './blocks/_footer.css';
-@import './blocks/_mobile-nav.css';
+@import './blocks/_header.scss';
+@import './blocks/_nav.scss';
+@import './blocks/_nav-list.scss';
+@import './blocks/_logo.scss';
+@import './blocks/_cart.scss';
+@import './blocks/_search-form.scss';
+@import './blocks/_results.scss';
+@import './blocks/_products.scss';
+@import './blocks/_card.scss';
+@import './blocks/_footer.scss';
+@import './blocks/_mobile-nav.scss';
