--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,675 @@
 @import './../fonts/Lato/stylesheet.css';
 @import './../fonts/Korataki/stylesheet.css';
-@import './base/_base.css';
-@import './base/_vars.css';
-@import './base/_reset.css';
-@import './blocks/_header.css';
-@import './blocks/_nav.css';
-@import './blocks/_nav-list.css';
-@import './blocks/_logo.css';
-@import './blocks/_cart.css';
-@import './blocks/_search-form.css';
-@import './blocks/_results.css';
-@import './blocks/_products.css';
-@import './blocks/_card.css';
-@import './blocks/_footer.css';
-@import './blocks/_mobile-nav.css';/*# sourceMappingURL=main.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+html,
+body {
+  font-family: var(--font-main);
+  color: var(--text-color);
+  font-size: 16px;
+  overflow-x: hidden;
+}
+
+.container {
+  max-width: 1430px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+@media (max-width: 1600px) {
+  .container {
+    max-width: 1270px;
+  }
+}
+:root {
+  --font-main: "Lato", sans-serif;
+  --font-title: ;
+  --font-accent: "Inter", sans-serif;
+  --text-color: #231815;
+  --text-white: #ffffff;
+  --text-muted: #808080;
+  --text-footer: #f5f5f5;
+  --orange-ui: #e45302;
+  --dark-bg: #231815;
+  --footer-bg: #0c0c0c;
+  --extra-dark-bg: #000000;
+}
+
+/* Reset and base styles  */
+* {
+  padding: 0px;
+  margin: 0px;
+  border: none;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Links */
+a,
+a:link,
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+/* Common */
+aside,
+nav,
+footer,
+header,
+section,
+main {
+  display: block;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-size: inherit;
+  font-weight: inherit;
+}
+
+ul,
+ul li {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
+}
+
+img,
+svg {
+  max-width: 100%;
+  height: auto;
+}
+
+address {
+  font-style: normal;
+}
+
+/* Form */
+input,
+textarea,
+button,
+select {
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background-color: transparent;
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button,
+input[type=submit] {
+  display: inline-block;
+  box-shadow: none;
+  background-color: transparent;
+  background: none;
+  cursor: pointer;
+}
+
+input:focus,
+input:active,
+button:focus,
+button:active {
+  outline: none;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+label {
+  cursor: pointer;
+}
+
+legend {
+  display: block;
+}
+
+.header {
+  margin-bottom: 60px;
+}
+
+.header__top {
+  background: var(--dark-bg);
+}
+
+.top-list {
+  display: flex;
+  justify-content: end;
+  gap: 70px;
+  padding: 12px 0;
+}
+
+.top-list__link {
+  color: var(--text-white);
+  font-weight: 400;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.top-list__link:hover {
+  opacity: 0.6;
+}
+
+@media (max-width: 960px) {
+  .header__top {
+    display: none;
+  }
+}
+.nav {
+  display: grid;
+  grid-template-columns: 2fr 7fr 1fr 1fr;
+  gap: 20px;
+  align-items: center;
+  justify-items: end;
+}
+
+.nav__btn {
+  display: none;
+  margin-left: auto;
+}
+
+@media (max-width: 1600px) {
+  .nav {
+    gap: 23px;
+  }
+}
+@media (max-width: 960px) {
+  .nav {
+    grid-template-columns: 1fr 1fr;
+    justify-items: start;
+  }
+  .nav__btn {
+    display: block;
+  }
+}
+.nav-list {
+  justify-self: center;
+  align-self: center;
+  display: flex;
+  text-transform: uppercase;
+  gap: 100px;
+}
+
+.nav-list__link {
+  color: var(--text-dark);
+  font-weight: 500;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.nav-list__link:hover {
+  opacity: 0.6;
+}
+
+@media (max-width: 960px) {
+  .nav-list {
+    display: none;
+  }
+}
+.logo img {
+  padding: 12px 0;
+}
+
+.cart {
+  background: var(--extra-dark-bg);
+  border-radius: 25px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.cart:hover {
+  background-color: rgb(46, 46, 46);
+}
+
+.cart a {
+  color: var(--text-white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 3.5px 19px;
+  width: 138px;
+  height: 40px;
+}
+
+.cart__img {
+  position: relative;
+}
+
+.cart__count {
+  position: absolute;
+  height: 18px;
+  width: 18px;
+  top: -3px;
+  right: -8px;
+  background-color: #fff;
+  font-family: var(--font-accent);
+  font-size: 12px;
+  line-height: 16.8px;
+  color: #1a1a1a;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cart.cart--mobile {
+  display: block;
+  width: 138px;
+}
+
+@media (max-width: 1600px) {
+  .cart {
+    background: var(--dark-bg);
+  }
+}
+@media (max-width: 960px) {
+  .cart {
+    display: none;
+  }
+}
+.header__search {
+  display: inline-block;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 170px;
+  height: 39px;
+  padding: 11px 13px 11px 21px;
+  border: 1px solid #f5f5f5;
+  border-radius: 25px;
+  gap: 10px;
+}
+
+.search-form__input {
+  width: 95%;
+}
+
+.search-form__input::-moz-placeholder {
+  font-weight: 300;
+}
+
+.search-form__input::placeholder {
+  font-weight: 300;
+}
+
+.search-form__btn {
+  transition: all 0.3s ease-in-out;
+}
+
+.search-form__btn:hover {
+  opacity: 0.6;
+}
+
+.header__search--small {
+  display: none;
+  background-color: var(--dark-bg);
+  width: 39px;
+  height: 39px;
+  border-radius: 50%;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.header__search--small:hover {
+  background-color: rgb(46, 46, 46);
+}
+
+@media (max-width: 1600px) {
+  .header__search {
+    display: none;
+  }
+  .header__search--small {
+    display: block;
+  }
+}
+@media (max-width: 960px) {
+  .header__search--small {
+    display: none;
+  }
+}
+.results__title {
+  font-family: "Korataki", sans-serif;
+  font-size: 44px;
+  font-weight: 400;
+  line-height: 61.6px;
+  margin-bottom: 40px;
+}
+
+@media (max-width: 1600px) {
+  .results__title {
+    font-size: 40px;
+  }
+}
+.products {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
+  margin-bottom: 60px;
+}
+
+@media (max-width: 1222px) {
+  .products {
+    gap: 30px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 771px) {
+  .products {
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 50px;
+  }
+}
+.card {
+  position: relative;
+}
+
+.card__photo {
+  margin-bottom: 20px;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.card__photo:hover .more-details {
+  transform: translateY(0);
+}
+
+.card__photo img {
+  border-radius: 20px;
+}
+
+.card__title {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 25.2px;
+  margin-bottom: 12px;
+}
+
+.price {
+  display: flex;
+  gap: 16px;
+}
+
+.price__main-value {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 30.8px;
+}
+
+.price__main-value--sale {
+  color: var(--orange-ui);
+}
+
+.price__sale-value {
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 30.8px;
+  text-decoration: line-through;
+  color: #808080;
+}
+
+.more-details {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 88px;
+  background: rgba(255, 255, 255, 0.7);
+  border-radius: 0 0 20px 20px;
+  transform: translateY(88px);
+  transition: all 0.3s ease-in-out;
+}
+
+.more-details__link {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 22.4px;
+  color: var(--text-white);
+  background-color: var(--orange-ui);
+  padding: 13px 30px;
+  border-radius: 25px;
+  height: 48px;
+  width: 258px;
+  text-align: center;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.more-details__link:hover {
+  background-color: #ff7c30;
+}
+
+.banner {
+  line-height: 22.4px;
+  color: var(--text-white);
+  background-color: var(--dark-bg);
+  width: 126px;
+  height: 38px;
+  border-radius: 25px;
+  padding: 5px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  z-index: 2;
+}
+
+.footer {
+  background-color: var(--footer-bg);
+  padding: 60px 0;
+  color: var(--text-footer);
+}
+
+.footer__grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 0 80px;
+  grid-template-areas: "logo address nav info" "protection contacts nav pay-method";
+}
+
+.footer__protection a {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  line-height: 20.8px;
+  color: #808080;
+  text-decoration: underline;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.footer__protection a:hover {
+  opacity: 0.6;
+}
+
+.footer__logo {
+  grid-area: logo;
+}
+
+.footer__protection {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  line-height: 20.8px;
+  color: var(--text-muted);
+  width: 322px;
+  grid-area: protection;
+}
+
+.footer__address {
+  grid-area: address;
+}
+
+.footer__title {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 18px;
+  margin-bottom: 20px;
+  color: var(--text-white);
+}
+
+.footer__contacts {
+  width: 246px;
+}
+
+.footer__nav {
+  grid-area: nav;
+}
+
+.footer__address {
+  margin-bottom: 38px;
+}
+
+.footer__info {
+  grid-area: info;
+}
+
+.footer__contacts a {
+  color: var(--text-footer);
+  transition: opacity 0.3s ease-in-out;
+}
+
+.footer__contacts a:hover {
+  opacity: 0.6;
+}
+
+.footer__contacts p:first-of-type {
+  margin-bottom: 25px;
+}
+
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.footer__list a {
+  color: var(--text-footer);
+  transition: opacity 0.3s ease-in-out;
+}
+
+.footer__list a:hover {
+  opacity: 0.6;
+}
+
+.footer__info {
+  text-align: end;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  /* margin-bottom: 72px; */
+}
+
+.footer__info a {
+  color: var(--text-muted);
+  transition: opacity 0.3s ease-in-out;
+  display: block;
+  white-space: nowrap;
+}
+
+.footer__info a:hover {
+  opacity: 0.6;
+}
+
+.footer__payment-method {
+  display: flex;
+  gap: 33px;
+  justify-content: end;
+  align-items: center;
+}
+
+@media (max-width: 1222px) {
+  .footer {
+    padding: 50px 0;
+  }
+  .footer__grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 103px 1fr 1fr 1fr;
+    gap: 37px 40px;
+    grid-template-areas: "logo logo logo" "address contacts nav" "info info nav" "pay-method protection protection";
+  }
+  .footer__info {
+    align-items: flex-start;
+  }
+  .footer__payment-method {
+    justify-content: start;
+    width: 215px;
+  }
+  .footer__protection {
+    width: auto;
+  }
+  .footer__logo {
+    width: 180px;
+  }
+}
+@media (max-width: 721px) {
+  .footer__title {
+    margin-bottom: 10px;
+  }
+  .footer__grid {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 80px 52px auto 1fr auto auto auto;
+    gap: 30px;
+    grid-template-areas: "logo" "address" "contacts" "nav" "info" "pay-method" "protection";
+  }
+  .footer__payment-method {
+    margin-top: 42px;
+  }
+}
+.mobile-nav-wrapper {
+  background-color: #fff;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 320px;
+  z-index: 3;
+  padding: 60px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  transform: translateX(320px);
+  transition: all 0.3s ease-in-out;
+}
+
+.mobile-nav-wrapper--open {
+  transform: translateX(0);
+}
+
+.mobile-nav-btn-close {
+  position: absolute;
+  right: 20px;
+  top: 30px;
+}
+
+.mobile-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.mobile-nav a {
+  color: var(--text-color);
+}/*# sourceMappingURL=main.css.map */
