--- a/style/blocks/_mobile-nav.scss
+++ b/style/blocks/_mobile-nav.scss
@@ -10,12 +10,11 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  transform: translateX(320px);
-  transition: all 0.3s ease-in-out;
+  display: none;
 }
 
 .mobile-nav-wrapper--open {
-  transform: translateX(0);
+  display: flex;
 }
 
 .mobile-nav-btn-close {
