--- a/style/blocks/_results.scss
+++ b/style/blocks/_results.scss
@@ -11,3 +11,11 @@
     font-size: 40px;
   }
 }
+
+@media (max-width: 721px) {
+  .results__title {
+    font-size: 24px;
+    line-height: 33.6px;
+    margin-bottom: 24px;
+  }
+}
