--- a/style/blocks/_header.scss
+++ b/style/blocks/_header.scss
@@ -24,7 +24,16 @@
 }
 
 @media (max-width: 960px) {
+  .header {
+    margin-bottom: 50px;
+  }
   .header__top {
     display: none;
+  }
+}
+
+@media (max-width: 721px) {
+  .header {
+    margin-bottom: 40px;
   }
 }
